# placebo

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/placebo/: __init__.py  __main__.py
